update api to be use mock data for recordings
